--- a/Proyecto Unit 1/svtickets-client/profile.html
+++ b/Proyecto Unit 1/svtickets-client/profile.html
@@ -69,7 +69,7 @@
           <form>
             <div class="mb-3">
               <label for="email">Email:</label>
-              <input type="email" class="form-control" name="email" id="email" placeholder="Email" />
+              <input type="email" class="form-control" name="email" id="email2" placeholder="Email" />
               <label for="name">Name:</label>
               <input type="text" class="form-control" name="name" id="name" placeholder="Name" />
             </div>
