Funcion de cambiar mail y nombre, contraseña, busqueda por url

--- a/Proyecto Unit 1/svtickets-client/profile.html
+++ b/Proyecto Unit 1/svtickets-client/profile.html
@@ -71,7 +71,7 @@
               <label for="email">Email:</label>
               <input type="email" class="form-control" name="email" id="email2" placeholder="Email" />
               <label for="name">Name:</label>
-              <input type="text" class="form-control" name="name" id="name" placeholder="Name" />
+              <input type="text" class="form-control" name="name" id="name2" placeholder="Name" />
             </div>
             <button type="submit" class="btn btn-primary">Save changes</button>
             <button type="button" class="btn btn-danger" id="cancelEditProfile">Cancel</button>
